Added a background image supporting iPXE. :) Changed the scripts to PHP.

--- a/tftp/Dockerfile
+++ b/tftp/Dockerfile
@@ -2,6 +2,8 @@ FROM alpine:3.19 as BuildBiosBetter
 RUN apk add --no-cache git gcc binutils make perl xz-dev mtools libc-dev
 RUN git clone https://github.com/ipxe/ipxe.git
 WORKDIR /ipxe/src
+RUN sed -i '/CONSOLE_CMD/c #define CONSOLE_CMD' config/general.h
+RUN sed -i '/CONSOLE_FRAMEBUFFER/c #define CONSOLE_FRAMEBUFFER' config/console.h
 COPY ./embed.ipxe .
 RUN make bin/undionly.kpxe EMBED=embed.ipxe
 
@@ -9,6 +11,8 @@ FROM alpine:3.19 as BuildEfiBetter
 RUN apk add --no-cache git gcc binutils make perl mtools libc-dev
 RUN git clone https://github.com/ipxe/ipxe.git
 WORKDIR /ipxe/src
+RUN sed -i '/CONSOLE_CMD/c #define CONSOLE_CMD' config/general.h
+RUN sed -i '/CONSOLE_FRAMEBUFFER/c #define CONSOLE_FRAMEBUFFER' config/console.h
 COPY ./embed.ipxe .
 RUN make bin-x86_64-efi/snponly.efi EMBED=embed.ipxe
 
