Changed the env file. Commented out the example rules, so they do not have to be deleted. Just adjusted. Made sure that the tftp /var/tftpboot is now a volume. Not container bound.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
        build: ./tftp/
        ports:
        - "69:69/udp"
+       volumes:
+       - tftpboot:/var/tftpboot
        restart: always
    webserver:
       build: ./webserver/
@@ -28,6 +30,9 @@ services:
       networks:
       - internal
       restart: always
+volumes:
+   tftpboot:
+      external: false
 networks:
    internal:
       driver: bridge
