--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DNSMASQ_INTERFACE= The interface Dnsmasq should listen on. eth0 for example.
-IPV4= The ip address of your server/interface. 192.168.1.1 for example.
-SUBNET= The subnet of your network/interface. 255.255.255.0 for example.
+DNSMASQ_INTERFACE=eth0 #The interface Dnsmasq should listen on. eth0 for example.
+IPV4=192.168.1.1 #The ip address of your server/interface. 192.168.1.1 for example.
+SUBNET=255.255.255.0 #The subnet of your network/interface. 255.255.255.0 for example.
