Added IMGVERIFY and HTTPS support in iPXE.

--- a/tftp/Dockerfile
+++ b/tftp/Dockerfile
@@ -3,6 +3,8 @@ RUN apk add --no-cache git gcc binutils make perl xz-dev mtools libc-dev
 RUN git clone https://github.com/ipxe/ipxe.git
 WORKDIR /ipxe/src
 RUN sed -i '/CONSOLE_CMD/c #define CONSOLE_CMD' config/general.h
+RUN sed -i '/DOWNLOAD_PROTO_HTTPS/c #define DOWNLOAD_PROTO_HTTPS' config/general.h
+RUN sed -i '/IMAGE_TRUST_CMD/c #define IMAGE_TRUST_CMD' config/general.h
 RUN sed -i '/CONSOLE_FRAMEBUFFER/c #define CONSOLE_FRAMEBUFFER' config/console.h
 COPY ./embed.ipxe .
 RUN make bin/undionly.kpxe EMBED=embed.ipxe
@@ -12,6 +14,8 @@ RUN apk add --no-cache git gcc binutils make perl mtools libc-dev
 RUN git clone https://github.com/ipxe/ipxe.git
 WORKDIR /ipxe/src
 RUN sed -i '/CONSOLE_CMD/c #define CONSOLE_CMD' config/general.h
+RUN sed -i '/DOWNLOAD_PROTO_HTTPS/c #define DOWNLOAD_PROTO_HTTPS' config/general.h
+RUN sed -i '/IMAGE_TRUST_CMD/c #define IMAGE_TRUST_CMD' config/general.h
 RUN sed -i '/CONSOLE_FRAMEBUFFER/c #define CONSOLE_FRAMEBUFFER' config/console.h
 COPY ./embed.ipxe .
 RUN make bin-x86_64-efi/snponly.efi EMBED=embed.ipxe
