Rewrited most of the tftp container. Made it possible to use with a RPI!

--- a/dnsmasq/dnsmasq.conf
+++ b/dnsmasq/dnsmasq.conf
@@ -9,16 +9,8 @@ log-dhcp
 dhcp-no-override
 bind-interfaces
 
-# The known types are x86PC, PC98, IA64_EFI, Alpha, Arc_x86,
-# Intel_Lean_Client, IA32_EFI, ARM_EFI, BC_EFI, Xscale_EFI and X86-64_EFI
-# This option is first and will be the default if there is no input from the user.
-
 # PXEClient:Arch:00000
-#pxe-service=X86PC, "Boot BIOS PXE", undionly
-pxe-service=X86PC, "Boot BIOS PXE", pxelinux
-
-# PXEClient:Arch:00007
-pxe-service=BC_EFI, "Boot UEFI PXE-BC", snponly.efi
+pxe-service=X86PC, "Boot BIOS PXE", pxelinux.0
 
 # PXEClient:Arch:00009
-pxe-service=X86-64_EFI, "Boot UEFI PXE-64", snponly.efi
+pxe-service=X86-64_EFI, "Boot UEFI PXE-64", ipxe.efi
